test/signal/negative/global_graph_negative.ml
let _must_not_typecheck = Eta_signal.Var.create 1
